[package]
name = "nitter-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2"
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "utils"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
linkify = "0.9.0"
dotenv = "0.15.0"

[profile.release]
strip = true
opt-level = "s"
lto = "fat"
debug = false
codegen-units = 1
